fix with logo and alignment

--- a/app/assets/stylesheets/styles.scss
+++ b/app/assets/stylesheets/styles.scss
@@ -975,3 +975,8 @@ footer.footer {
 {
     margin-left:19px;
 }           
+
+nav
+{
+ margin-left:120px;
+ }
